resolved the scroll on load issue. navlink for pathname will be active on load and page will scroll to active component. contrast theme now saved to local storage for user pref

--- a/client/src/Components/Nav/nav.css
+++ b/client/src/Components/Nav/nav.css
@@ -23,8 +23,10 @@ nav {
 
 .nav-link:hover,
 .nav-link:focus,
+.nav-link:focus-visible,
 .nav-link:active {
   color: var(--orange);
+  outline: none;
 }
 
 .nav-link::before {
